examples/kubernetes/dex/dex.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  annotations:
  labels:
    app: @dexApp@
  name: @dexDeployment@
  namespace: @namespace@
spec:
  replicas: 1
  selector:
    matchLabels:
      app: @dexApp@
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: @dexApp@
    spec:
      serviceAccount: @dexServiceAccount@
      volumes:
      - name: dex-config
        configMap:
          name: @dexConfig@
      - name: dex-web-templates
        configMap:
          name: @dexWebTemplates@
      - name: ssl
        secret:
          secretName: @ospreySslSecret@
      - name: dex-storage
        emptyDir: {}

      containers:
      - name: dex
        image: @dexImage@
        command:
        - /usr/local/bin/dex
        args:
        - serve
        - /etc/dex/cfg/config.yml

        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: @dexPort@
            scheme: HTTPS
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: @dexPort@
            scheme: HTTPS

        ports:
        - containerPort: @dexPort@
          name: dex
          protocol: TCP

        resources:
          limits:
            memory: 256Mi
          requests:
            cpu: 150m
            memory: 256Mi

        volumeMounts:
        - mountPath: /etc/dex/cfg
          name: dex-config
        - mountPath: /data
          name: dex-storage
        - mountPath: /ssl
          name: ssl
          readOnly: true
        - mountPath: /web/templates/approval.html
          name: dex-web-templates
          subPath: approval.html
        - mountPath: /web/templates/error.html
          name: dex-web-templates
          subPath: error.html
        - mountPath: /web/templates/footer.html
          name: dex-web-templates
          subPath: footer.html
        - mountPath: /web/templates/header.html
          name: dex-web-templates
          subPath: header.html
        - mountPath: /web/templates/login.html
          name: dex-web-templates
          subPath: login.html
        - mountPath: /web/templates/oob.html
          name: dex-web-templates
          subPath: oob.html
        - mountPath: /web/templates/password.html
          name: dex-web-templates
          subPath: password.html
