examples/kubernetes/dex/service.yml
apiVersion: v1
kind: Service
metadata:
  name: @dexService@
  namespace: @namespace@
spec:
  type: NodePort
  ports:
  - name: dex
    protocol: TCP
    port: @dexPort@
    targetPort: @dexPort@
    nodePort: @dexNodePort@
  selector:
    app: @dexApp@
